src/GameLog.scss
// IMPORTS
@import "./common/common.scss";

// STYLES
.gameBox {
    padding: 0 !important;
    margin: 1rem auto;

    text-align: center;

    border: 2px solid black;

    .titleWrapper {
        &:hover,
        &:focus {
            cursor: pointer;
        }

        .title {
            padding: .5rem;
            margin: 0;

            font-family: $fontFamily-fauxdesto;
            font-size: 3.5rem;
            font-weight: normal;

            background: $color-jumbotronGray;


            span {
                text-transform: uppercase;

                .hyphen {
                    position: relative;
                    bottom: 1rem;
                }
            }
        }
    }

    .content {
        padding: 0;
        margin: 0;

        .infoWrapper {
            padding: 0;
            margin-bottom: .5rem;

            list-style: none;

            @include flex(center, center);

            li {
                margin: 0 1rem;

                @include flex(center, center);

                * {
                    margin: 0;
                }

                h1 {
                    margin-right: .35rem;

                    font-family: $fontFamily-fauxdesto;
                    font-size: 1.5rem;
                }

                p {
                    margin-top: .4rem;

                    font-family: $fontFamily-handwritten;
                    font-size: 1.25rem;
                }
            }
        }

        .wrapper {
            margin: 0 0 .5rem;

            h1 {
                margin: 0;

                font-family: $fontFamily-fauxdesto;
                font-size: 3rem;
            }

            .box {
                padding: 1rem;

                border: 1px solid darkgray;

                p {
                    margin: 0;

                    font-size: 1rem;

                    text-align: left;
                }
            }
        }

        .notesWrapper {
            i {
                font-family: $fontFamily-book-italic;
            }

            .playerNotes {
                font-family: $fontFamily-handwritten;
            }
        }

        .twoCol {
            margin-bottom: 1rem;

            @include flex(stretch, center);

            .arCol {
                flex-basis: 0;
                flex-grow: 1;
            }

            .legacyWrapper {
                height: 100%;

                @include flex(stretch, stretch, column);

                .box {
                    margin-bottom: .5rem;

                    flex-grow: 1;
                }
            }
        }
    }
}

